# RustWebApplication

./: .gitignore  readme.md
projects/application/: Cargo.toml  readme.md
projects/application/src/: main.rs
projects/application/src/application/: application.rs  command_types.rs  mod.rs
projects/application/src/database/: database.rs
projects/client/: .eslintrc  .gitignore  .jestrc.json  custom.d.ts  package.json  readme.md  tsconfig.json
projects/client/src/: Routes.tsx  index.tsx  native.ts
projects/client/src/api/: application.ts
projects/client/src/assets/: common.css
projects/client/src/components/Icons/: Hamburger.tsx  IconTemplate.tsx
projects/client/src/components/Navigation/: Navigation.tsx  navigation.module.css
projects/client/src/pages/Application/: Application.tsx  application.css
projects/client/src/pages/Cube/: Cube.tsx  cube.module.css
projects/client/src/pages/Cubes/: Cubes.tsx  cubes.module.css
projects/client/src/pages/Cubes/CubeCard/: CubeCard.tsx  cube-card.module.css  index.ts
projects/client/src/templates/: index-development.template.html  index-production.template.html
projects/client/tools/webpack/: build-config-options.js
projects/client/tools/webpack/configs/: webpack-dev.config.js  webpack-prod.config.js
projects/client/tools/webpack/dev-server/: dev-server-options.js  dev-server.js
projects/webview_native_api/: Cargo.toml  readme.md
projects/webview_native_api/src/: command_types.rs  lib.rs  native_handler.rs
projects/webview_native_api/src/native_apis/: file_dialog.rs
